# citypulse

./: .env.example  HackathonPlan.md  PersonA_BuildPlan.md  PersonB_BuildPlan.md  README.md  TeamExecutionPlan.md  package.json  pnpm-lock.yaml  pnpm.yaml
agent/: .env.example  main.py  pyproject.toml
agent/scripts/: seed_demo.py
agent/src/: graph.py  llm.py  state.py
agent/src/models/: __init__.py  city.py
agent/src/nodes/: blueprint_node.py  emit_node.py  impact_node.py  parse_node.py  research_node.py  scoring_node.py
agent/src/services/: linkup_service.py  redis_service.py
agent/tests/: test_blueprint.py  test_linkup.py  test_redis.py
scripts/: copy-cesium.js
src/app/(citypulse)/: layout.tsx
src/app/api/citypulse-copilotkit/: route.ts
src/app/citypulse/: citypulse.css  layout.tsx  page.tsx
src/components/citypulse/: AgentBridge.tsx  AgentSidebar.tsx  CityCanvas.tsx  CityCesiumCanvas.tsx  CityGrid.tsx  LandingOverlay.tsx  ResearchProgress.tsx  RiskZone.tsx  ScenarioSwitcher.tsx  ZoneDetailCard.tsx  londonZones.ts
src/lib/: cityStore.ts
