[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "ag-ui-langgraph>=0.0.36",
  "copilotkit>=0.1.90",
  "fastapi>=0.136.3",
  "langchain==1.3.1",
  "langchain-core==1.4.0",
  "langchain-google-genai>=4.2.4",
  "langgraph==1.2.1",
  "python-dotenv>=1.2.2",
  "uvicorn>=0.48.0",
  "linkup-sdk>=0.2.0",
  "redis>=5.2.0",
  "ag-ui-a2ui-toolkit>=0.0.3",
  "hiredis>=3.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
